--- a/src/app/shared/components/list-card/list-card.component.html
+++ b/src/app/shared/components/list-card/list-card.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" class="app-card mb-1 p-3 mat-elevation-z2 anim-block" matRipple>
-    <span class="ellipsis">
-        <mat-icon class="mr-2">{{ startIcon }}</mat-icon>
-        <span class="mat-h4">{{ text }}</span>
+<div fxLayout="row" fxLayoutAlign="space-between center" class="app-card m-1 p-3 ellipsis mat-elevation-z2" matRipple>  
+    <mat-icon class="mr-2">{{ startIcon }}</mat-icon>
+    <span class="ellipsis mr-auto" fxFlex>
+        {{ text }}
     </span>
     <mat-icon>{{ endIcon }}</mat-icon> 
 </div>
