--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -29,7 +29,7 @@ $content-margin: 8;
 $bottom-nav-height: 44;
 
 @mixin max-width{
-  max-width:600px;
+  max-width:600px!important;
 }
 
 @mixin notification{
