fix visual bugs and added route transitions

--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,6 +1,6 @@
 <div class="p-1 h-100 max-width" style="overflow:hidden" fxLayout="column" fxLayoutAlign="start stretch">
 
-    <div class="m-1 mt-2 mb-2 fadeIn">
+    <div class="m-1 mt-2 mb-2 fadeInDown">
         <input matInput appInputListener (inputChanged)="onSearch($event)" #container
             placeholder="Søk med adresse eller id" class="w-100 p-1 pl-3 mat-elevation-z2"
             style="background:white;border:none;border-radius:10px">
@@ -8,7 +8,7 @@
 
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
-    <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex>
+    <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex class="fadeInRight">
         <app-list-card *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" startIcon="home_work"
             [endIcon]="mission.finished ? 'check':'chevron_right'" [text]="'(' + mission.id + ') ' + mission.address"
             [routerLink]="['/oppdrag', mission.id, 'detaljer']">
