--- a/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
+++ b/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
@@ -1,4 +1,4 @@
-<div class="h-100" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm$ | async; let vm">
+<div class="h-100 fadeInLeft" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm$ | async; let vm">
     <cdk-virtual-scroll-viewport itemSize="82" fxFlex>
 
         <div class="app-card mat-elevation-z2 m-1" matRipple
