--- a/src/app/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -3,11 +3,11 @@
 </ng-container>
 
 <ng-template let-summaries #weekList>
-    <div class="h-100" fxLayout="column" fxLayoutAlign="start stretch">
+    <div class="h-100 fadeInRight" fxLayout="column" fxLayoutAlign="start stretch">
         <cdk-virtual-scroll-viewport itemSize="82" fxFlex>
             <app-swipe-card *cdkVirtualFor="let summary of summaries; trackBy: trackByWeek; templateCacheSize:0"
-                [navButton]="{callback: selectWeek, params: summary.week}"
-                [swipeEnabled]="summary.openHours > 0" [swipeButton]="{
+                [navButton]="{callback: selectWeek, params: summary.week}" [swipeEnabled]="summary.openHours > 0"
+                [swipeButton]="{
                         callback: confirmTimesheets, 
                         params: [summary.timesheets], 
                         icon: summary.openHours > 0 ? 'lock_open' : 'lock', 
@@ -16,18 +16,26 @@
             </app-swipe-card>
         </cdk-virtual-scroll-viewport>
     </div>
+    <ng-container *ngIf="summaries.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
 </ng-template>
 
 <ng-template let-timesheets #timesheetList>
-    <div class="h-100" fxLayout="column" fxLayoutAlign="start stretch">
+    <div class="h-100 fadeInRight" fxLayout="column" fxLayoutAlign="start stretch">
         <cdk-virtual-scroll-viewport itemSize="108" fxFlex>
-            <app-timesheet-card adminView="true" *cdkVirtualFor="let timesheet of timesheets; trackBy: trackById"
-                [timesheet]="timesheet" (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
-            </app-timesheet-card>
+            <div class="m-1" *cdkVirtualFor="let timesheet of timesheets; trackBy: trackById">
+                <app-timesheet-card adminView="true" [timesheet]="timesheet"
+                    (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
+                </app-timesheet-card>
+            </div>
         </cdk-virtual-scroll-viewport>
     </div>
+    <ng-container *ngIf="timesheets.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
+</ng-template>
+
+<ng-template #noContent>
+    <div class="w-100 text-center mt-2 mat-h3">Fant ingen timer!</div>
 </ng-template>
 
 <ng-template #loading>
-    <span>Ingen timer registrert</span>
+    <mat-spinner *ngIf="loading$ | async else noContent" class="center-spinner" color="accent"></mat-spinner>
 </ng-template>
