--- a/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -3,8 +3,13 @@
             startIcon="person" endIcon="chevron_right" [text]="user.firstName + ' ' +user.lastName"
             [routerLink]="['/timeadministrering', user.userName, thisYear]">
         </app-list-card>
+        <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
 </ng-container>
 
+<ng-template #noUsers>
+    <div class="w-100 text-center mt-2 mat-h3">Fant ingen ansatte!</div>
+</ng-template>
+
 <ng-template #loading>
-    <mat-spinner class="center-spinner" color="accent"></mat-spinner>
+    <mat-spinner *ngIf="loading$ | async else noUsers" class="center-spinner" color="accent"></mat-spinner>
 </ng-template>
