--- a/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
+++ b/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
@@ -7,14 +7,14 @@
 
         <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
 
-          <app-timesheet-day-label class="w-100 mb-1 fadeInDown"
+          <app-timesheet-day-label class="w-100 mb-1 fadeInDown" style="z-index:1"
             [date]="vm.dateParams | getDateByDateParams : weekDay"
             (labelClicked)="openTimesheetForm($event)">
           </app-timesheet-day-label>
 
-          <div class="w-100" style="padding: 0 1px 0 1px"
+          <div class="w-100" style="padding: 0 1px 0 1px; z-index:0"
             fxLayout="column" fxLayoutAlign="start center" fxFlex>
-              <app-timesheet-mission-bar class="w-100 mb-1 fadeIn"
+              <app-timesheet-mission-bar class="w-100 mb-1 fadeInDown"
                 *ngFor="let timesheet of vm.days[weekDay] | sortByDate: 'startTime';" 
                 [timesheet]="timesheet"
                 (barClicked)="timesheet.status ? openTimesheetCard($event) : openTimesheetForm(undefined, $event)"
