replaced bootstrap with custom classes

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -37,4 +37,29 @@ $bottom-nav-height: 44;
   color:black;
 }
 
+$gap-size-unit: 4;
+$directions: ('t':'top', 'l':'left', 'r':'right', 'b':'bottom');
+$gap-styles: ('m':'margin', 'p':'padding');
+$levels: 6;
 
+@mixin gap-units {
+  @each $styleAbbr, $style in $gap-styles{
+    @for $i from 0 through $levels {     
+      .#{$styleAbbr}-#{$i} { #{$style}: $gap-size-unit * $i * 1px }
+      @each $dirAbbr, $dir in $directions{
+        .#{$styleAbbr}#{$dirAbbr}-#{$i} { #{$style}-#{$dir}: $gap-size-unit * $i * 1px }
+      }
+    } 
+    //Autos
+    .#{$styleAbbr}-auto { #{$style}: auto }
+    @each $dirAbbr, $dir in $directions{
+      .#{$styleAbbr}#{$dirAbbr}-auto { #{$style}-#{$dir}: auto }
+    }
+  }
+}
+
+.h-100{height:100%;}
+.w-100{width:100%;}
+.text-center{text-align:center}
+
+@include gap-units;
