--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="p-1 max-width">
-  <mat-grid-list cols="2" rowHeight="3:2" gutterSize="5" class="mat-subheading-2 m-1 mb-2">
+<div class="p-2 max-width">
+  <mat-grid-list cols="2" rowHeight="3:2" gutterSize="5" class="mat-subheading-2 mb-2">
     <mat-grid-tile class="mat-elevation-z2 bg-foreground anim-block" matRipple [routerLink]="['/oppdrag']">
       <span class="text-center">
         <mat-icon class="scale-150">view_list</mat-icon><br />
