--- a/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,10 +1,10 @@
-<ng-container *ngIf="users$ | async else loading; let users">
+<div class="p-2" *ngIf="users$ | async else loading; let users">
         <app-list-card *ngFor="let user of users" 
             startIcon="person" endIcon="chevron_right" [text]="user.firstName + ' ' +user.lastName"
             [routerLink]="['/timeadministrering', user.userName, thisYear]">
         </app-list-card>
         <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
-</ng-container>
+</div>
 
 <ng-template #noUsers>
     <div class="w-100 text-center mt-2 mat-h3">Fant ingen ansatte!</div>
