--- a/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
+++ b/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
@@ -1,5 +1,5 @@
 <div class="h-100 fadeInLeft" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm$ | async; let vm">
-    <cdk-virtual-scroll-viewport itemSize="82" fxFlex>
+    <cdk-virtual-scroll-viewport itemSize="78" maxBufferPx="800" minBufferPx="800" fxFlex>
 
         <div class="app-card mat-elevation-z2 m-1" matRipple
             *cdkVirtualFor="let summary of vm.summaries; trackBy: trackByWeekNr; templateCacheSize:0" 
