--- a/src/app/users/user-list/user-card/user-card.component.html
+++ b/src/app/users/user-list/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="app-card m-1">
+<mat-card class="app-card mb-1">
     <mat-card-content fxLayout="row" fxLayoutAlign="space-between center">
         
         <mat-icon class="mr-2">{{ (user.role == Roles.Oppdragsgiver) ? 'work' : 'person' }}</mat-icon>
