--- a/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,4 +1,4 @@
-<div class="p-2" *ngIf="users$ | async else loading; let users">
+<div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
         <app-list-card *ngFor="let user of users" 
             startIcon="person" endIcon="chevron_right" [text]="user.firstName + ' ' +user.lastName"
             [routerLink]="['/timeadministrering', user.userName, thisYear]">
