--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div class="p-2" *ngIf="users$ | async else loading; let users; let index = index">
+<div class="p-2 max-width" *ngIf="users$ | async else loading; let users; let index = index">
 
     <app-user-card *ngFor="let user of users" 
       [user]="user"
