--- a/src/app/mission/mission-details/mission-details-view/image-list/image-list.component.scss
+++ b/src/app/mission/mission-details/mission-details-view/image-list/image-list.component.scss
@@ -1,5 +1,10 @@
 @import '../../../../../variables';
 
+.img-selected{
+  border:1px solid black;
+  transform:scale(0.95);
+}
+
  .img-row {
     display: -ms-flexbox; /* IE10 */
     display: flex;
@@ -16,13 +21,30 @@
     max-width: 25%;
   }
 
-  .img-column img {
-    padding:$gap-size-unit * 0.25px;
-    vertical-align: middle;
+  .img-container {
+    position:relative;
+    margin:$gap-size-unit  * .25px;
+    img{
+       width:100%;
+       height:100%;
+       vertical-align: middle;
+       -moz-box-sizing: border-box;
+       -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+     }
+  }
+
+  .img-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
     width: 100%;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-     box-sizing: border-box;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: white;
   }
 
   /* Responsive layout - makes a two column-layout instead of four columns */
