--- a/src/app/mission/mission-image-list/image-list/image-list.component.scss
+++ b/src/app/mission/mission-image-list/image-list/image-list.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../variables';
+@import '../../../../variables';
 
 .img-selected{
   border:1px solid black;
@@ -19,32 +19,6 @@
     -ms-flex: 25%; /* IE10 */
     flex: 25%;
     max-width: 25%;
-  }
-
-  .img-container {
-    position:relative;
-    margin:$gap-size-unit  * .25px;
-    img{
-       width:100%;
-       height:100%;
-       vertical-align: middle;
-       -moz-box-sizing: border-box;
-       -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-     }
-  }
-
-  .img-overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: white;
   }
 
   /* Responsive layout - makes a two column-layout instead of four columns */
