--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -4,7 +4,7 @@
     {{ message || 'Vennligst bekreft operasjonen.' }}
   </div>
 
-  <div class="float-right m-2">
+  <div class="m-2" style="float:right">
     <button mat-button color="warn" (click)="onNoClick()">Avbryt</button>
     <button mat-button  [mat-dialog-close]="true" cdkFocusInitial>Bekreft</button>
   </div>
